force-app/main/default/objects/DailyLog__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>&quot;http://www.google.com/maps/search/?api=1&amp;query=&quot; + IF( Clock_In_Location__Latitude__s&lt; 1,&quot;0&quot; + TEXT ( Clock_In_Location__Latitude__s), TEXT( Clock_In_Location__Latitude__s))+ &quot;,&quot; + IF(Clock_In_Location__Longitude__s&lt; 1, &quot;0&quot; + TEXT(Clock_In_Location__Longitude__s), TEXT (Clock_In_Location__Longitude__s))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>