force-app/main/default/objects/DailyLog__c/fields/Clock_In__c.field-meta.xml
<CustomField>
    <fullName>Clock_In__c</fullName>
    <label>Day started time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>