force-app/main/default/objects/DailyLog__c/fields/Clock_In_Location__c.field-meta.xml
<CustomField>
    <fullName>Clock_In_Location__c</fullName>
    <label>Day started Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>