force-app/main/default/objects/DailyLog__c/fields/Clock_Out__c.field-meta.xml
<CustomField>
    <fullName>Clock_Out__c</fullName>
    <label>Day ended time</label>
    <type>DateTime</type>
</CustomField>