force-app/main/default/objects/DailyLog__c/fields/ClockInAddress__c.field-meta.xml
<CustomField>
    <fullName>ClockInAddress__c</fullName>
    <label>ClockInAddress</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>