force-app/main/default/objects/DailyLog__c/fields/ClockOutAddress__c.field-meta.xml
<CustomField>
    <fullName>ClockOutAddress__c</fullName>
    <label>ClockOutAddress</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>