force-app/main/default/objects/DailyLog__c/fields/First_check_in_store__c.field-meta.xml
<CustomField>
    <fullName>First_check_in_store__c</fullName>
    <formula>First_Check_In_Visit__r.Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First check in store</label>
    <type>Text</type>
</CustomField>