force-app/main/default/objects/DailyLog__c/fields/First_Check_in_time__c.field-meta.xml
<CustomField>
    <fullName>First_Check_in_time__c</fullName>
    <formula>First_Check_In_Visit__r.Actual_Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Check-in time</label>
    <type>DateTime</type>
</CustomField>