force-app/main/default/objects/DailyLog__c/fields/KMs_Travelled__c.field-meta.xml
<CustomField>
    <fullName>KMs_Travelled__c</fullName>
    <label>Distance Travelled(KM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>