force-app/main/default/objects/DailyLog__c/fields/Last_check_out_time__c.field-meta.xml
<CustomField>
    <fullName>Last_check_out_time__c</fullName>
    <formula>Last_Check_Out_Visit__r.Actual_End_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last check out time</label>
    <type>DateTime</type>
</CustomField>