force-app/main/default/objects/DailyLog__c/fields/Last_Check_Out_Visit__c.field-meta.xml
<CustomField>
    <fullName>Last_Check_Out_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Check Out Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Logs (Last Check Out Visit)</relationshipLabel>
    <relationshipName>Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>