force-app/main/default/objects/DailyLog__c/fields/Last_checkout_store__c.field-meta.xml
<CustomField>
    <fullName>Last_checkout_store__c</fullName>
    <formula>Last_Check_Out_Visit__r.Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last checkout store</label>
    <type>Text</type>
</CustomField>