force-app/main/default/objects/DailyLog__c/fields/Meal_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Meal_Allowance__c</fullName>
    <label>Meal Allowance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>