force-app/main/default/objects/DailyLog__c/fields/User_job_role__c.field-meta.xml
<CustomField>
    <fullName>User_job_role__c</fullName>
    <formula>CASE( Owner:User.ProfileId   , &apos;00e5g000001Ao5B&apos;, &apos;Sales promoter&apos;, &apos;00e5g000001BFaT&apos;, &apos;Sales officer&apos;,&apos;00e5g000001BGl9&apos;,&apos;Sales manager&apos;,&apos;00e5g000001eXgW&apos;,&apos;Admin&apos;,&apos;Other&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User job role</label>
    <type>Text</type>
</CustomField>